--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.12,<3.13"
 streamlit = "^1.39.0"
 langchain-community = "^0.3.2"
 langchain = "^0.3.3"
@@ -28,6 +28,9 @@ accelerate = ">=0.26.0"
 bitsandbytes = "^0.44.1"
 pypdf = "^5.0.1"
 image = "^1.5.33"
+faiss-cpu = "^1.9.0"
+selenium = "^4.25.0"
+unstructured = "^0.16.0"
 
 [build-system]
 requires = ["poetry-core"]
